force-app/main/default/objects/Deal_Transaction__c/Deal_Transaction__c.object-meta.xml
<CustomObject>
    <label>Deal Transaction</label>
    <nameField>
        <displayFormat>DT-{000000}</displayFormat>
        <label>Deal Transaction Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Deal Transactions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>