force-app/main/default/objects/Deal_Transaction__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Deal Transactions</relationshipLabel>
    <relationshipName>Deal_Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>