force-app/main/default/objects/Deal_Transaction__c/fields/Actual_Dual_Value__c.field-meta.xml
<CustomField>
    <fullName>Actual_Dual_Value__c</fullName>
    <formula>if(
  text(Company__r.CurrencyIsoCode) = &quot;AUD&quot;,
  Actual_Home_Value__c,
  Actual_Home_Value__c / Dual_Rate__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Actual Dual Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>