force-app/main/default/objects/Deal_Transaction__c/fields/Amount_Rollup__c.field-meta.xml
<CustomField>
    <fullName>Amount_Rollup__c</fullName>
    <inlineHelpText>The gross amount (inclusive of tax) of the Amounts entered on the Deal Transaction Lines</inlineHelpText>
    <label>Amount Rollup</label>
    <summarizedField>Deal_Transaction_Line__c.Amount__c</summarizedField>
    <summaryForeignKey>Deal_Transaction_Line__c.Deal_Transaction__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>