force-app/main/default/objects/Deal_Transaction__c/fields/Bank_Account__c.field-meta.xml
<CustomField>
    <fullName>Bank_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Bank Account</label>
    <referenceTo>c2g__codaBankAccount__c</referenceTo>
    <relationshipLabel>Deal Transactions</relationshipLabel>
    <relationshipName>Deal_Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>