force-app/main/default/objects/Deal_Transaction__c/fields/Bank_Account_GLA2__c.field-meta.xml
<CustomField>
    <fullName>Bank_Account_GLA2__c</fullName>
    <label>Bank Account GLA2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>