force-app/main/default/objects/Deal_Transaction__c/fields/Bank_Account_GLA__c.field-meta.xml
<CustomField>
    <fullName>Bank_Account_GLA__c</fullName>
    <formula>Bank_Account__r.c2g__GeneralLedgerAccount__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bank Account GLA</label>
    <type>Text</type>
</CustomField>