force-app/main/default/objects/Deal_Transaction__c/fields/Cancelation_Date__c.field-meta.xml
<CustomField>
    <fullName>Cancelation_Date__c</fullName>
    <label>Cancelation Date</label>
    <type>Date</type>
</CustomField>