force-app/main/default/objects/Deal_Transaction__c/fields/Clearing_Account__c.field-meta.xml
<CustomField>
    <fullName>Clearing_Account__c</fullName>
    <formula>Case(RecordType.Name,

&quot;Coupon Transaction&quot;,
if(
Coupon_Group__c = &quot;Cancellation or Customer Experience&quot;,
&quot;6151 - Coupon Expenses - Customers&quot;,
&quot;6150 - Coupon Expenses - Marketing&quot;
),

&quot;Sale Transaction&quot;,
&quot;2289 - Cancellation Clearing&quot;,

&quot;1200 - Accounts Receivable&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Clearing Account</label>
    <type>Text</type>
</CustomField>