force-app/main/default/objects/Deal_Transaction__c/fields/Commission_Amount__c.field-meta.xml
<CustomField>
    <fullName>Commission_Amount__c</fullName>
    <inlineHelpText>Amount of commission payable to the agent through which the sale was made</inlineHelpText>
    <label>Commission Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>