force-app/main/default/objects/Deal_Transaction__c/fields/Commission_Amount_Rollup__c.field-meta.xml
<CustomField>
    <fullName>Commission_Amount_Rollup__c</fullName>
    <label>Commission Amount Rollup</label>
    <summarizedField>Deal_Transaction_Line__c.Commission_Amount__c</summarizedField>
    <summaryForeignKey>Deal_Transaction_Line__c.Deal_Transaction__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>