force-app/main/default/objects/Deal_Transaction__c/fields/Commission_Tax_Amount__c.field-meta.xml
<CustomField>
    <fullName>Commission_Tax_Amount__c</fullName>
    <formula>-(Commission_Amount_Rollup__c -  Commission_Taxable_Amount__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Commission Tax Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>