force-app/main/default/objects/Deal_Transaction__c/fields/Company__c.field-meta.xml
<CustomField>
    <fullName>Company__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Company</label>
    <referenceTo>c2g__codaCompany__c</referenceTo>
    <relationshipLabel>Deal Transactions</relationshipLabel>
    <relationshipName>Deal_Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>