force-app/main/default/objects/Deal_Transaction__c/fields/Component__c.field-meta.xml
<CustomField>
    <fullName>Component__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Component</label>
    <referenceTo>Component__c</referenceTo>
    <relationshipLabel>Deal Transactions</relationshipLabel>
    <relationshipName>Deal_Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>