force-app/main/default/objects/Deal_Transaction__c/fields/Control_Account__c.field-meta.xml
<CustomField>
    <fullName>Control_Account__c</fullName>
    <formula>case(RecordType.Name,

&quot;Coupon Transaction&quot;,&quot;2210 - Provision for Coupons&quot;,

&quot;Sale Transaction&quot;,&quot;2101 - Receipts clearing&quot;,

&quot;Multi-Line Expense&quot;,
if(
   not(isblank( TAD_Booking_Records__c)),
   TAD_Booking_Records__r.Credit_Card_GLA__c,  
   &quot;2100 - Accounts Payable&quot;
),

&quot;2100 - Accounts Payable&quot;

)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Control Account</label>
    <type>Text</type>
</CustomField>