force-app/main/default/objects/Deal_Transaction__c/fields/Control_Account_PB__c.field-meta.xml
<CustomField>
    <fullName>Control_Account_PB__c</fullName>
    <label>Control Account</label>
    <length>80</length>
    <type>Text</type>
</CustomField>