force-app/main/default/objects/Deal_Transaction__c/fields/Coupon__c.field-meta.xml
<CustomField>
    <fullName>Coupon__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Coupon</label>
    <referenceTo>coupon__c</referenceTo>
    <relationshipLabel>Deal Transactions</relationshipLabel>
    <relationshipName>Deal_Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>