force-app/main/default/objects/Deal_Transaction__c/fields/Coupon_Group__c.field-meta.xml
<CustomField>
    <fullName>Coupon_Group__c</fullName>
    <label>Coupon Group</label>
    <length>80</length>
    <type>Text</type>
</CustomField>