force-app/main/default/objects/Deal_Transaction__c/fields/Credit_Journal__c.field-meta.xml
<CustomField>
    <fullName>Credit_Journal__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Credit Journal</label>
    <referenceTo>c2g__codaJournal__c</referenceTo>
    <relationshipLabel>Deal Transactions (Credit Journal)</relationshipLabel>
    <relationshipName>Deal_Transactions3</relationshipName>
    <type>Lookup</type>
</CustomField>