force-app/main/default/objects/Deal_Transaction__c/fields/Current_Deal_Transaction__c.field-meta.xml
<CustomField>
    <fullName>Current_Deal_Transaction__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>This Deal Transaction may be one of many Deal Transactions associated with an Order. Each time an Order is changed, the Current Deal Transaction is superseded by another. The Current Deal Transaction reference is a lookup to the most recent one.</inlineHelpText>
    <label>Current Deal Transaction</label>
    <referenceTo>Deal_Transaction__c</referenceTo>
    <relationshipLabel>Deal Transactions (Current Deal Transaction)</relationshipLabel>
    <relationshipName>Deal_Transactions1</relationshipName>
    <type>Lookup</type>
</CustomField>