force-app/main/default/objects/Deal_Transaction__c/fields/Customer_Email__c.field-meta.xml
<CustomField>
    <fullName>Customer_Email__c</fullName>
    <formula>Account__r.Customer_Email__c</formula>
    <label>Customer Email</label>
    <type>Text</type>
</CustomField>