force-app/main/default/objects/Deal_Transaction__c/fields/Departure_Date__c.field-meta.xml
<CustomField>
    <fullName>Departure_Date__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Departure Date</label>
    <referenceTo>departures_dates__c</referenceTo>
    <relationshipLabel>Deal Transactions</relationshipLabel>
    <relationshipName>Deal_Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>