force-app/main/default/objects/Deal_Transaction__c/fields/Deposit_Credit__c.field-meta.xml
<CustomField>
    <fullName>Deposit_Credit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Deposit Credit</label>
    <referenceTo>c2g__codaPurchaseCreditNote__c</referenceTo>
    <relationshipLabel>Deal Transactions (Deposit Credit)</relationshipLabel>
    <relationshipName>Deal_Transactions1</relationshipName>
    <type>Lookup</type>
</CustomField>