force-app/main/default/objects/Deal_Transaction__c/fields/Destination_Company__c.field-meta.xml
<CustomField>
    <fullName>Destination_Company__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Destination Company</label>
    <referenceTo>c2g__codaCompany__c</referenceTo>
    <relationshipLabel>Deal Transactions (Destination Company)</relationshipLabel>
    <relationshipName>Deal_Transactions1</relationshipName>
    <type>Lookup</type>
</CustomField>