force-app/main/default/objects/Deal_Transaction__c/fields/Developer_Notes__c.field-meta.xml
<CustomField>
    <fullName>Developer_Notes__c</fullName>
    <label>Developer Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>