force-app/main/default/objects/Deal_Transaction__c/fields/Dual_Rate__c.field-meta.xml
<CustomField>
    <fullName>Dual_Rate__c</fullName>
    <inlineHelpText>The exchange rate applied to convert the Home Currency value of the transaction to AUD for consolidated reporting.</inlineHelpText>
    <label>Dual Rate</label>
    <precision>18</precision>
    <scale>9</scale>
    <type>Number</type>
</CustomField>