force-app/main/default/objects/Deal_Transaction__c/fields/Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Due_Date__c</fullName>
    <formula>if(
  text(ff_MPT_JOIN__r.Days__c)= &quot;&quot;,
  Transaction_Date__c,
  Transaction_Date__c + value(text(ff_MPT_JOIN__r.Days__c))
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Due Date</label>
    <type>Date</type>
</CustomField>