force-app/main/default/objects/Deal_Transaction__c/fields/Entity__c.field-meta.xml
<CustomField>
    <fullName>Entity__c</fullName>
    <label>Entity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Trip A Deal Pty Limited</fullName>
            </value>
            <value>
                <fullName>TripADeal (NZ) Limited</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>