force-app/main/default/objects/Deal_Transaction__c/fields/Expected_Deposit_Amount__c.field-meta.xml
<CustomField>
    <fullName>Expected_Deposit_Amount__c</fullName>
    <label>Expected Deposit Amount</label>
    <summarizedField>Deal_Transaction_Line__c.Expected_Deposit_Amount__c</summarizedField>
    <summaryForeignKey>Deal_Transaction_Line__c.Deal_Transaction__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>