force-app/main/default/objects/Deal_Transaction__c/fields/Expected_Dual_Value__c.field-meta.xml
<CustomField>
    <fullName>Expected_Dual_Value__c</fullName>
    <formula>if(
  text(CurrencyIsoCode) = text(Company__r.CurrencyIsoCode),
  Expected_Home_Value__c,
  Expected_Home_Value__c / Dual_Rate__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Expected Dual Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>