force-app/main/default/objects/Deal_Transaction__c/fields/FC_Number__c.field-meta.xml
<CustomField>
    <fullName>FC_Number__c</fullName>
    <inlineHelpText>Foreign Exchange Contract Number as per Bank reference</inlineHelpText>
    <label>FC Number</label>
    <length>80</length>
    <type>Text</type>
</CustomField>