force-app/main/default/objects/Deal_Transaction__c/fields/ff_Component_Type__c.field-meta.xml
<CustomField>
    <fullName>ff_Component_Type__c</fullName>
    <label>Component Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>