force-app/main/default/objects/Deal_Transaction__c/fields/ff_Currency__c.field-meta.xml
<CustomField>
    <fullName>ff_Currency__c</fullName>
    <formula>TEXT( CurrencyIsoCode)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Currency</label>
    <type>Text</type>
</CustomField>