force-app/main/default/objects/Deal_Transaction__c/fields/ff_DT_archetype__c.field-meta.xml
<CustomField>
    <fullName>ff_DT_archetype__c</fullName>
    <formula>IF(ff_Merchant_Type__c ==&apos;Single Line Expense&apos;,&apos;SLE&apos;+&apos;;&apos;+Account__c +&apos;;&apos;+ Deal__c +&apos;;&apos;+ Departure_Date__c+&apos;;&apos;+Component__c,  IF(ff_Merchant_Type__c ==&apos;Multi Line Expense&apos;, &apos;MLE&apos;+&apos;;&apos;+Account__c, &apos;Populate Merchant Type&apos;) )+&apos;;&apos;+IF( TEXT(Entity__c)=&apos;Trip A Deal Pty Limited&apos; ,&apos;TADCompany&apos;, &apos;TNZCompany&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DT archetype</label>
    <type>Text</type>
</CustomField>