force-app/main/default/objects/Deal_Transaction__c/fields/ff_Filter_Info_Fields__c.field-meta.xml
<CustomField>
    <fullName>ff_Filter_Info_Fields__c</fullName>
    <label>Filter Info Fields</label>
    <length>255</length>
    <type>Text</type>
</CustomField>