force-app/main/default/objects/Deal_Transaction__c/fields/ff_Invoiced_Amount_Internal__c.field-meta.xml
<CustomField>
    <fullName>ff_Invoiced_Amount_Internal__c</fullName>
    <label>Invoiced Amount Internal</label>
    <summarizedField>Deal_Transaction_Line__c.Expected_Amount__c</summarizedField>
    <summaryFilterItems>
        <field>Deal_Transaction_Line__c.ff_Is_Invoiced_Internal__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Deal_Transaction_Line__c.Status__c</field>
        <operation>equals</operation>
        <value>Active</value>
    </summaryFilterItems>
    <summaryForeignKey>Deal_Transaction_Line__c.Deal_Transaction__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>