force-app/main/default/objects/Deal_Transaction__c/fields/ff_Merchant_Type__c.field-meta.xml
<CustomField>
    <fullName>ff_Merchant_Type__c</fullName>
    <formula>TEXT(Account__r.Merchant_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Merchant Type</label>
    <type>Text</type>
</CustomField>