force-app/main/default/objects/Deal_Transaction__c/fields/ff_MPT_JOIN__c.field-meta.xml
<CustomField>
    <fullName>ff_MPT_JOIN__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Payment Terms</label>
    <referenceTo>MPT_JOIN__c</referenceTo>
    <relationshipLabel>Deal Transactions</relationshipLabel>
    <relationshipName>Deal_Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>