force-app/main/default/objects/Deal_Transaction__c/fields/ff_Proxy__c.field-meta.xml
<CustomField>
    <fullName>ff_Proxy__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Proxy</label>
    <type>Checkbox</type>
</CustomField>