force-app/main/default/objects/Deal_Transaction__c/fields/Forward_Rate__c.field-meta.xml
<CustomField>
    <fullName>Forward_Rate__c</fullName>
    <formula>Amount__c /  Funding_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Forward Rate</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>