force-app/main/default/objects/Deal_Transaction__c/fields/Funding_Bank_Account__c.field-meta.xml
<CustomField>
    <fullName>Funding_Bank_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Funding Bank Account</label>
    <referenceTo>c2g__codaBankAccount__c</referenceTo>
    <relationshipLabel>Deal Transactions (Funding Bank Account)</relationshipLabel>
    <relationshipName>Deal_Transactions1</relationshipName>
    <type>Lookup</type>
</CustomField>