force-app/main/default/objects/Deal_Transaction__c/fields/Funding_Currency__c.field-meta.xml
<CustomField>
    <fullName>Funding_Currency__c</fullName>
    <label>Funding Currency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Currencies</valueSetName>
    </valueSet>
</CustomField>