force-app/main/default/objects/Deal_Transaction__c/fields/Is_Escape_Deal__c.field-meta.xml
<CustomField>
    <fullName>Is_Escape_Deal__c</fullName>
    <formula>text(Deal__r.Accounting_Treatment_AU__c) = &quot;Agent&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Escape Deal</label>
    <type>Checkbox</type>
</CustomField>