force-app/main/default/objects/Deal_Transaction__c/fields/Negative_Funding_Amount__c.field-meta.xml
<CustomField>
    <fullName>Negative_Funding_Amount__c</fullName>
    <formula>- Funding_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Negative Funding Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>