force-app/main/default/objects/Deal_Transaction__c/fields/Negative_Net_Variance_Amount__c.field-meta.xml
<CustomField>
    <fullName>Negative_Net_Variance_Amount__c</fullName>
    <label>Negative Net Variance Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>