force-app/main/default/objects/Deal_Transaction__c/fields/Negative_Tax_Free_Amount__c.field-meta.xml
<CustomField>
    <fullName>Negative_Tax_Free_Amount__c</fullName>
    <formula>-Tax_Free_Amount_Rollup__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Negative Tax Free Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>