force-app/main/default/objects/Deal_Transaction__c/fields/Net_Amount__c.field-meta.xml
<CustomField>
    <fullName>Net_Amount__c</fullName>
    <formula>case(
  RecordType.Name, 
  &quot;Coupon Transaction&quot;, 
    Coupon__r.Discount__c - Coupon__r.Discount_Applied__c,
  &quot;Multi-Line Expense&quot;,
  Amount_Rollup__c - Tax_Amount__c,
  Net_Amount_Rollup__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>On Sale and Expense Transactions this value represents the amount of the sale or purchase amount net of GST. On Coupon Transactions, this value represents the unused portion on the coupon value at expiry.</inlineHelpText>
    <label>Net Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>