force-app/main/default/objects/Deal_Transaction__c/fields/Net_Amount_Rollup__c.field-meta.xml
<CustomField>
    <fullName>Net_Amount_Rollup__c</fullName>
    <label>Net Amount Rollup</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>