force-app/main/default/objects/Deal_Transaction__c/fields/Offset_Account__c.field-meta.xml
<CustomField>
    <fullName>Offset_Account__c</fullName>
    <formula>case( RecordType.Name, 

&quot;Coupon Transaction&quot;,
if(
   Coupon_Group__c = &quot;Customer Experience&quot;,
  &quot;6151 - Coupon Expenses - Customers&quot;,
  if(
   Coupon_Group__c = &quot;Marketing without Consideration&quot;,
    &quot;6150 - Coupon Expenses - Marketing&quot;,
    if(
      Coupon_Group__c = &quot;Staff&quot;,
      &quot;6152 - Coupon Expenses - Staff&quot;,
      &quot;2299 - Coupon Clearing&quot;
    )
  )
),

&quot;Forward Contract&quot;,
 Funding_Bank_Account__r.c2g__GeneralLedgerAccount__r.Name,

&quot;Sale Transaction&quot;, 
&quot;2230 - Deferred Revenue&quot;, 

&quot;Single-Line Expense&quot;, 
if( 
  or( 
    and( 
       not(isblank(Transaction_Date__c)),
       Transaction_Date__c &lt;= 
       Departure_Date__r.date__c 
    ), 
    and( 
       not(isblank(Transaction_Date__c)), 
       Transaction_Date__c &lt;= 
       Departure_Date__r.date__c 
    ), 
    isblank(Transaction_Date__c) 
  ), 
  &quot;1410 - Prepayments - Deals&quot;, 
  &quot;2220 - Accruals - Deals&quot; 
), 

&quot;Multi-Line Expense&quot;, 
&quot;1410 - Prepayments - Deals&quot;, 

&quot;1200 - Accounts Receivable&quot; 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Offset Account</label>
    <type>Text</type>
</CustomField>