force-app/main/default/objects/Deal_Transaction__c/fields/Order_Coupon__c.field-meta.xml
<CustomField>
    <fullName>Order_Coupon__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Order Coupon</label>
    <referenceTo>Order_Coupon__c</referenceTo>
    <relationshipLabel>Deal Transactions</relationshipLabel>
    <relationshipName>Deal_Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>