force-app/main/default/objects/Deal_Transaction__c/fields/Order_Line__c.field-meta.xml
<CustomField>
    <fullName>Order_Line__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Order Line</label>
    <referenceTo>order_line__c</referenceTo>
    <relationshipLabel>Deal Transactions</relationshipLabel>
    <relationshipName>Deal_Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>