force-app/main/default/objects/Deal_Transaction__c/fields/Original_Deal_Transaction__c.field-meta.xml
<CustomField>
    <fullName>Original_Deal_Transaction__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Original Deal Transaction</label>
    <referenceTo>Deal_Transaction__c</referenceTo>
    <relationshipLabel>Non Proxy Deal Transactions</relationshipLabel>
    <relationshipName>Deal_Transactions2</relationshipName>
    <type>Lookup</type>
</CustomField>