force-app/main/default/objects/Deal_Transaction__c/fields/Payable_Invoice__c.field-meta.xml
<CustomField>
    <fullName>Payable_Invoice__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Payable Invoice</label>
    <referenceTo>c2g__codaPurchaseInvoice__c</referenceTo>
    <relationshipName>ERP_Order_Line_Summaries</relationshipName>
    <type>Lookup</type>
</CustomField>