force-app/main/default/objects/Deal_Transaction__c/fields/Payment_Status__c.field-meta.xml
<CustomField>
    <fullName>Payment_Status__c</fullName>
    <formula>if(
  and(
    isblank(Payable_Invoice__c),
    isblank(Payable_Credit_Note__c)
  ),
  &quot;Pending&quot;,
  Payable_Invoice__r.c2g__PaymentStatus__c&amp;
  Payable_Credit_Note__r.c2g__PaymentStatus__c
)</formula>
    <label>Payment Status</label>
    <type>Text</type>
</CustomField>