force-app/main/default/objects/Deal_Transaction__c/fields/Payment_Transaction__c.field-meta.xml
<CustomField>
    <fullName>Payment_Transaction__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Payment Transaction</label>
    <referenceTo>Payment_Transaction__c</referenceTo>
    <relationshipLabel>Deal Transactions</relationshipLabel>
    <relationshipName>Deal_Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>