force-app/main/default/objects/Deal_Transaction__c/fields/Primary_Dt__c.field-meta.xml
<CustomField>
    <fullName>Primary_Dt__c</fullName>
    <formula>IF( (ff_Merchant_Type__c=&apos;Single Line Expense&apos; || ff_Proxy__c=true), true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Primary Dt</label>
    <type>Checkbox</type>
</CustomField>