force-app/main/default/objects/Deal_Transaction__c/fields/Process_CC__c.field-meta.xml
<CustomField>
    <fullName>Process_CC__c</fullName>
    <formula>and( 
     RecordType.Name = &quot;Coupon Transaction&quot;, 
     Coupon__r.Expiry_Date__c = today(), 
     isblank(Order_Coupon__c), 
     not(isblank(Coupon__c)), 
     not(isblank(Coupon__r.Expiry_Date__c)) 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Process CC</label>
    <type>Checkbox</type>
</CustomField>