force-app/main/default/objects/Deal_Transaction__c/fields/Process_CI__c.field-meta.xml
<CustomField>
    <fullName>Process_CI__c</fullName>
    <formula>Or( 
  and( 
     RecordType.Name = &quot;Coupon Transaction&quot;, 
     Coupon__r.Expiry_Date__c &lt; today(), 
     isblank(Order_Coupon__c), 
     not(isblank(Coupon__c)), 
     not(isblank(Coupon__r.Expiry_Date__c)),
     Status_formula__c &lt;&gt; &quot;Disabled&quot;
  ), 
  Status_formula__c = &quot;Superseded&quot; 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Process CI</label>
    <type>Checkbox</type>
</CustomField>