force-app/main/default/objects/Deal_Transaction__c/fields/Process_CP__c.field-meta.xml
<CustomField>
    <fullName>Process_CP__c</fullName>
    <formula>and(
RecordType.Name = &quot;Coupon Transaction&quot;,
not(isblank(Order_Coupon__c))
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Process CP</label>
    <type>Checkbox</type>
</CustomField>