force-app/main/default/objects/Deal_Transaction__c/fields/Process_DC__c.field-meta.xml
<CustomField>
    <fullName>Process_DC__c</fullName>
    <formula>and(
RecordType.Name = &quot;Sale Transaction&quot;,
or(
Status_formula__c = &quot;Superseded&quot;
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Process DC</label>
    <type>Checkbox</type>
</CustomField>