force-app/main/default/objects/Deal_Transaction__c/fields/Process_DS__c.field-meta.xml
<CustomField>
    <fullName>Process_DS__c</fullName>
    <formula>and( RecordType.Name = &quot;Sale Transaction&quot;, Status_formula__c &lt;&gt; &quot;Cancelled&quot; )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Process DS</label>
    <type>Checkbox</type>
</CustomField>