force-app/main/default/objects/Deal_Transaction__c/fields/Process_FP__c.field-meta.xml
<CustomField>
    <fullName>Process_FP__c</fullName>
    <formula>Today() &lt;=  Settlement_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Process FP</label>
    <type>Checkbox</type>
</CustomField>