force-app/main/default/objects/Deal_Transaction__c/fields/Process_ML_PCN__c.field-meta.xml
<CustomField>
    <fullName>Process_ML_PCN__c</fullName>
    <formula>and(
  RecordType.Name = &quot;Multi-Line Expense&quot;,
  not(isblank(Vendor_Invoice_Number__c)),
  or(
    Status_formula__c = &quot;Cancelled&quot;,
    and(
       Status_formula__c = &quot;Active&quot;,
       Amount_Rollup__c  &lt; 0
    )
   )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Process ML PCN</label>
    <type>Checkbox</type>
</CustomField>