force-app/main/default/objects/Deal_Transaction__c/fields/Process_ML_PIN__c.field-meta.xml
<CustomField>
    <fullName>Process_ML_PIN__c</fullName>
    <formula>and(
RecordType.Name = &quot;Multi-Line Expense&quot;,
not(isblank(Vendor_Invoice_Number__c)),
Amount_Rollup__c &gt; 0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Process ML PIN</label>
    <type>Checkbox</type>
</CustomField>