force-app/main/default/objects/Deal_Transaction__c/fields/Process_PC__c.field-meta.xml
<CustomField>
    <fullName>Process_PC__c</fullName>
    <formula>Status_formula__c = &quot;Superseded&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Process PC</label>
    <type>Checkbox</type>
</CustomField>