force-app/main/default/objects/Deal_Transaction__c/fields/Process_PT__c.field-meta.xml
<CustomField>
    <fullName>Process_PT__c</fullName>
    <formula>and( or( RecordType.Name = &quot;Payment Transaction&quot;, and( RecordType.Name = &quot;Single-Line Expense&quot;, not(isblank( TAD_Booking_Records__c)) ) ), Status_formula__c &lt;&gt;&quot;Cancelled&quot; )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Process PT</label>
    <type>Checkbox</type>
</CustomField>