force-app/main/default/objects/Deal_Transaction__c/fields/Processed_CI__c.field-meta.xml
<CustomField>
    <fullName>Processed_CI__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Processed CI</label>
    <type>Checkbox</type>
</CustomField>