force-app/main/default/objects/Deal_Transaction__c/fields/Processed_CP__c.field-meta.xml
<CustomField>
    <fullName>Processed_CP__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Processed CP</label>
    <type>Checkbox</type>
</CustomField>