force-app/main/default/objects/Deal_Transaction__c/fields/Processed_DC__c.field-meta.xml
<CustomField>
    <fullName>Processed_DC__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Processed DC</label>
    <type>Checkbox</type>
</CustomField>