force-app/main/default/objects/Deal_Transaction__c/fields/Processed_DJ__c.field-meta.xml
<CustomField>
    <fullName>Processed_DJ__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Processed DJ</label>
    <type>Checkbox</type>
</CustomField>